--- a/client/src/components/near/index.css
+++ b/client/src/components/near/index.css
@@ -1,3 +1,43 @@
-.app {
+.near {
   
+}
+
+.user {
+    display: flex;
+    align-items: stretch;
+    justify-content: space-between;
+    max-width: 500px;
+    margin-bottom: -4px;
+}
+
+.user__pic {
+    width: 40%;
+}
+.user__pic img {
+    width: 100%;
+    height: auto;
+}
+
+.user__data {
+    width: 50%;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    margin-left: 20px;
+}
+
+.user__data__name {
+    text-align: center;
+    margin-bottom: 12px;
+}
+
+.user__data__name span {
+    background: #000;
+    color: #FFF;
+    padding: 3px;
+}
+
+.user__data__message {
+    text-align: center;
+    font-style: italic;
 }
