--- a/client/src/components/chat/index.css
+++ b/client/src/components/chat/index.css
@@ -1,3 +1,95 @@
-.app {
-  
+.chat {
+    padding-bottom: 60px;
+}
+
+.chat__bottom {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+.chat__title {
+    text-align: center;
+    margin-top: 10px;
+}
+
+.chat__go-back-btn {
+    width: 100%;
+    padding: 7px;
+    background: #000;
+    color: #FFF;
+    border: none;
+    font-size: 16pt;
+    margin-top: -10px;
+}
+
+.chat__bottom__input {
+    display: flex;
+    align-items: stretch;
+    width: 100%;
+    height: 40px;
+    justify-content: center;
+}
+
+.chat__bottom__input button {
+    background: #000;
+    border: none;
+    flex-grow: 0.2;
+    border: solid 1px #000;
+}
+
+.chat__bottom__input img {
+    height: 30px;
+    width: auto;
+}
+
+.chat__bottom__input input {
+    flex-grow: 0.8;
+    border: solid 1px #000;
+    border-left: none;
+    border-right: none;
+}
+
+.chat__messages {
+    margin-top: 20px;
+    max-width: 500px;
+    padding: 10px;
+    max-height: 0%;
+    overflow-y: auto;
+}
+
+.chat__messages__message--left {
+    float: left;
+}
+
+.chat__messages__message--right {
+    float: right;
+}
+
+.chat__messages__message {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.chat__messages__message__text {
+    flex-grow: 0.6;
+    border: solid 2px #000;
+    min-height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.chat__messages__message__picture {
+    flex-grow: 0.2;
+    text-align: center;
+}
+
+.chat__messages__message__picture img {
+    height: 60px;
+    width: auto;
+    border-radius: 50%;
 }
