--- a/client/src/components/near/index.css
+++ b/client/src/components/near/index.css
@@ -41,3 +41,10 @@
     text-align: center;
     font-style: italic;
 }
+
+.empty {
+    text-align: center;
+    font-size: 16pt;
+    font-style: italic;
+    color: rgba(0, 0, 0, 0.7);
+}
